--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,6 +4,7 @@
 {% block title %}Accueil{% endblock %}
 
 {% block body %}
+{% include 'components/_header.html.twig'%}
   <div class="container">
     <h1>Bienvenue sur GoldenGoat !</h1>
     <p>Ceci est votre première page Symfony + Bootstrap.</p>
