--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,9 +5,11 @@
 
 {% block body %}
 {% include 'components/_header.html.twig'%}
+
   <div class="container">
     <h1>Bienvenue sur GoldenGoat !</h1>
     <p>Ceci est votre première page Symfony + Bootstrap.</p>
   </div>
-  
+{% include 'components/_footer.html.twig' %}
 {% endblock %}
+
