--- a/templates/components/_footer.html.twig
+++ b/templates/components/_footer.html.twig
@@ -1,10 +1,22 @@
 <footer class="footer">
   <div class="footer__container">
     <div class="footer__icons">
-      <a class="footer__icon" href="#" aria-label="TikTok">
+      <a
+        class="footer__icon"
+        href="https://www.tiktok.com/@goldengoat.fr"
+        target="_blank"
+        rel="noopener"
+        aria-label="TikTok"
+      >
         <i class="fab fa-tiktok"></i>
       </a>
-      <a class="footer__icon" href="#" aria-label="Instagram">
+      <a
+        class="footer__icon"
+        href="https://www.instagram.com/goldengoat.fr/"
+        target="_blank"
+        rel="noopener"
+        aria-label="Instagram"
+      >
         <i class="fab fa-instagram"></i>
       </a>
     </div>
