Ajout de l'authentification admin et des fixtures d'utilisateur

--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -1,5 +1,6 @@
-{% extends '@EasyAdmin/page/content.html.twig' %}
+{# templates/admin/dashboard.html.twig #}
+{% extends '@EasyAdmin/layout.html.twig' %}
 
-{% block content %}
-    <h1>Bienvenue sur le dashboard</h1>
-{% endblock %}
+{% block main %}
+    {# ... #}
+{% endblock main %}
