--- a/assets/styles/app.sass
+++ b/assets/styles/app.sass
@@ -1,5 +1,10 @@
 @import './variables'
+
 //components
 @import './components/header'
-
 @import './components/footer'
+
+//login
+@import './login/login'
+@import './login/register'
+@import './login/account'
