--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,17 +1,51 @@
 {# templates/registration/register.html.twig #}
-
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Register</h1>
+    <div class="register">
+        <div class="register__wrapper">
+            <h1 class="register__heading">Inscription</h1>
 
-    {{ form_start(registrationForm) }}
-    {{ form_row(registrationForm.prenom) }}
-    {{ form_row(registrationForm.nom) }}
-    {{ form_row(registrationForm.email) }}
-    {{ form_row(registrationForm.plainPassword) }}
-    {{ form_row(registrationForm.agreeTerms) }}
+            {{ form_start(registrationForm, { attr: { class: 'register__form' } }) }}
 
-    <button class="btn btn-primary">Register</button>
-    {{ form_end(registrationForm) }}
+            {{ form_row(registrationForm.prenom, {
+                label_attr: { class: 'register__label' },
+                attr:       { class: 'register__input' }
+            }) }}
+
+            {{ form_row(registrationForm.nom, {
+                label_attr: { class: 'register__label' },
+                attr:       { class: 'register__input' }
+            }) }}
+
+            {{ form_row(registrationForm.email, {
+                label_attr: { class: 'register__label' },
+                attr:       { class: 'register__input' }
+            }) }}
+
+            {{ form_row(registrationForm.plainPassword.first, {
+                label_attr: { class: 'register__label' },
+                attr:       { class: 'register__input' }
+            }) }}
+
+            {{ form_row(registrationForm.plainPassword.second, {
+                label_attr: { class: 'register__label' },
+                attr:       { class: 'register__input' }
+            }) }}
+
+            {{ form_row(registrationForm.agreeTerms, {
+                label_attr: { class: 'register__checkboxLabel' },
+                row_attr:   { class: 'register__checkbox' }
+            }) }}
+
+            <button class="register__submit">Valider mon inscription</button>
+            {{ form_end(registrationForm) }}
+
+            {# ——— nouveau lien vers la page de connexion ——— #}
+            <p class="register__loginLink">
+                Vous avez déjà un compte&nbsp;?
+                <a href="{{ path('app_login') }}">Se connecter</a>
+            </p>
+        </div>
+    </div>
 {% endblock %}
