--- a/assets/styles/variables.sass
+++ b/assets/styles/variables.sass
@@ -1,4 +1,4 @@
-$gold:   #CBAD83 !default
+$gold:   #f2e2a6 !default
 $light-gold   : #e0c38f !default
 $gray-light   : #A67541 !default
 $primary: $gold !default
