--- a/templates/admin/security/login.html.twig
+++ b/templates/admin/security/login.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
     <div class="login">
         <div class="login__wrapper">
-            <h1 class="login__heading">Connexion administrateur</h1>
+            <h1 class="login__heading">CONNEXION ADMIN</h1>
 
             <form method="post" action="{{ path('admin_login') }}">
                 {% if error %}
