--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,13 @@
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+            integrity="sha512-…"
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
 
     </head>
     <body>
