Ajout des icônes Bootstrap et mise à jour des styles d'interface utilisateur

--- a/assets/styles/components/_header.sass
+++ b/assets/styles/components/_header.sass
@@ -36,7 +36,12 @@
     &--active
       color: $gold
 
-  &__user-icon img
-    height: 50px
-    margin-right: 50px
+  &__user-icon
+    color: white
+
+    i
+      font-size: 3rem
+      line-height: 1
+
+
     
